crates/ir/tests/snapshots/lower_test__ownership__own_deferred_trait_method.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module ownership__own_deferred_trait_method

trait Default[n8] { default(): ~n8 }
instance ownership__own_deferred_trait_method.Default[Int] { default=Default$$Int$$default }
import core/peek/peek as peek(h) -> h
import core/list/last as last(List[u3]) -> Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5) -> List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool) -> List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1) -> y1
import core/list/map as map(List[y], (y) -> a1) -> List[a1]
import core/vec/to_list as to_list(Vec[c8]) -> List[c8]
import core/io/println as println(m) -> Unit
import core/option/Some as Some(e) -> Option[e]
import core/result/Ok as Ok(g) -> Result[f, g]
import core/result/Err as Err(f) -> Result[f, g]
import core/list/Cons as Cons(h, List[h]) -> List[h]
fn test() -> ~Int =
  let v1: Dict[ownership__own_deferred_trait_method.Default, Int] = get_dict ownership__own_deferred_trait_method.Default[Int]
  let v0: ~Int = trait_call ownership__own_deferred_trait_method.Default.default(v1)
  v0

fn Default$$Int$$default() -> ~Int =
  0
