crates/ir/tests/snapshots/lower_test__ownership__own_fabrication_generic_ok.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module ownership__own_fabrication_generic_ok

import core/peek/peek as peek(h): h
import core/list/last as last(List[u3]): Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5): List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool): List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1): y1
import core/list/map as map(List[y], (y) -> a1): List[a1]
import core/vec/to_list as to_list(Vec[y8]): List[y8]
import core/io/println as println(s): Unit
import core/option/Some as Some(e): Option[e]
import core/result/Ok as Ok(g): Result[f, g]
import core/result/Err as Err(f): Result[f, g]
import core/list/Cons as Cons(h, List[h]): List[h]
fn ok(v0: (k9) -> String, v1: k9) -> String =
  let v2: String = call_closure v0(v1)
  v2

fn test() -> String =
  let v3: (Int) -> ~String = make_closure(lambda$27, [])
  let v5: String = call ok(v3, 42)
  v5

fn lambda$27(v4: Int) -> ~String =
  "hi"
