crates/ir/tests/snapshots/lower_test__ownership__own_fn_coerce_to_higher_order.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module ownership__own_fn_coerce_to_higher_order

import core/peek/peek as peek(e) -> e
import core/list/last as last(List[r3]) -> Option[r3]
import core/list/sort_by as sort_by(List[w5], (w5) -> l5) -> List[w5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[z7]) -> List[z7]
import core/io/println as println(h) -> Unit
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]
fn apply(v0: ~(l8) -> p8, v1: l8) -> p8 =
  let v2: p8 = call_closure v0(v1)
  v2

fn double(v3: Int) -> Int =
  let v4: Int = mul_int(v3, 2)
  v4

fn test() -> Int =
  let v5: (Int) -> Int = make_closure(double, [])
  let v6: (Int) -> Int = v5
  let v7: Int = call apply(v6, 21)
  v7
